Fix profile position in page

--- a/src/components/profileElement/ProfileElement.css
+++ b/src/components/profileElement/ProfileElement.css
@@ -4,9 +4,7 @@
   color: #f7f7f7;
   font-size: 20px;
   cursor: pointer;
-
-  margin-right: 15px;
-  margin-bottom: 15px;
+  margin: 18px;
 }
 
 .profile-element-img {
