--- a/src/pages/filter/Filter.css
+++ b/src/pages/filter/Filter.css
@@ -11,15 +11,28 @@
 
 .label {
   --color: #ff5347;
+}
+
+.filter-item {
+  --color: #ff5347;
   margin-top: 20px;
+}
+
+.date-picker {
+  margin-left: 10px;
 }
 
 .label-icon {
   --color: #ff5347;
   margin-right: 115px;
 }
+
 .icon-style {
   margin-right: 4px;
   position: relative;
   bottom: -2px;
+}
+
+.explore-button {
+  --background-color: #ff5347;
 }
