--- a/src/components/profilePanel/ProfilePanel.scss
+++ b/src/components/profilePanel/ProfilePanel.scss
@@ -28,13 +28,7 @@
     bottom: 20%;
     box-shadow: 0px 4px 21px -17px;
     border-radius: 63px;
-  }
-
-  & .avatar-img {
-    top: 2px;
-    margin: 0 auto;
-    width: 110px;
-    height: 110px;
+    background-image: url(https://ionicframework.com/docs/demos/api/avatar/avatar.svg);
   }
 
   & button {
