--- a/src/pages/main/Main.scss
+++ b/src/pages/main/Main.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
+
 .main-bg {
   background-color: #f7f7f7;
 }
@@ -65,4 +67,10 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+}
+
+.main {
+  & .trip {
+    margin: 20% auto;
+  }
 }
