--- a/src/components/profilePanel/ProfilePanel.scss
+++ b/src/components/profilePanel/ProfilePanel.scss
@@ -103,15 +103,20 @@
     width: 100%;
     height: 80%;
     position: absolute;
-    /* Old browsers */
-    background: #fe784d;
-    /* FF3.6-15 */
-    background: -moz-linear-gradient(left, #fe784d 0%, #ff5347 100%);
-    /* Chrome10-25,Safari5.1-6 */
-    background: -webkit-linear-gradient(left, #fe784d 0%, #ff5347 100%);
-    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    display: flex;
+    flex-flow: row;
     background: linear-gradient(to right, #fe784d 0%, #ff5347 100%);
-    /* IE6-9 */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fe784d', endColorstr='#ff5347',GradientType=1 );
+    justify-content: center;
+    align-items: center;
+
+    .username {
+      position: relative;
+      bottom: 53px;
+      color: white;
+      font-family: "Roboto";
+      font-weight: 700;
+      font-size: 1.4rem;
+    }
   }
 }
