Implement viewTrips page

--- a/src/pages/trip/ViewTrip.scss
+++ b/src/pages/trip/ViewTrip.scss
@@ -134,6 +134,12 @@
       }
     }
   }
+
+  & .day-trip {
+    position: relative;
+    bottom: 10pt;
+    margin-bottom: 38pt;
+  }
 }
 
 :root {
