Replace pin icon to font awsome

--- a/src/components/trip/Trip.scss
+++ b/src/components/trip/Trip.scss
@@ -64,13 +64,13 @@
       }
 
       .total-attraction-number {
-        left: 66px;
-        top: 2px;
+        left: 69px;
+        bottom: 1pt;
         position: relative;
         color: #ff5347;
         font-family: "Roboto";
         font-weight: 700;
-        font-size: 0.85rem;
+        font-size: 8pt;
       }
     }
 
