--- a/src/pages/attraction/ViewAttraction.scss
+++ b/src/pages/attraction/ViewAttraction.scss
@@ -3,4 +3,75 @@
   flex-flow: column;
   justify-content: center;
   align-content: center;
+  & .header {
+    position: relative;
+    width: 100%;
+    height: 48pt;
+    text-align: center;
+    background: linear-gradient(to right, #fe784d 0%, #ff5347 100%);
+
+    .trip-name {
+      position: relative;
+      font-family: "Roboto";
+      font-weight: bold;
+      color: white;
+      z-index: 1;
+      font-size: 17pt;
+      bottom: 35pt;
+    }
+
+    .back-btn {
+      color: white;
+      position: absolute;
+      left: 0;
+      top: 8px;
+      color: "white";
+    }
+  }
+  & .go-to-map {
+    width: 46pt;
+    padding: 0;
+    height: 46pt;
+    border: none;
+    border-radius: 50px;
+    position: absolute;
+    z-index: 1;
+    box-shadow: 0pt 1pt 4pt rgba(0, 0, 0, 0.16);
+    left: 4%;
+    background: linear-gradient(to right, #fe784d 0%, #ff5347 100%);
+    top: 62pt;
+
+    .icon {
+      position: relative;
+      color: white;
+      font-size: 19pt;
+    }
+  }
+  & .trip-picture {
+    width: 100%;
+    position: relative;
+    height: 137pt;
+    background-image: url(https://picsum.photos/380/207);
+  }
+
+  & .description-container {
+    .title {
+      width: 90%;
+      position: relative;
+      font-family: "Roboto";
+      font-weight: bold;
+      color: #4f4e4f;
+      font-size: 15pt;
+      left: 14pt;
+    }
+
+    .description {
+      width: 88%;
+      position: relative;
+      left: 14pt;
+      font-size: 14pt;
+      font-family: "Roboto";
+      color: #717171;
+    }
+  }
 }
