--- a/src/pages/map/MapView.scss
+++ b/src/pages/map/MapView.scss
@@ -14,11 +14,14 @@
 }
 
 .top {
-    padding-top:20px;
-    width: 100%;
-    height: 10%;
-    background: linear-gradient(to right, #FE784D, #FF5347);
-    color: white;
+      background: linear-gradient(to right, #FE784D, #FF5347);
+      color: white;
+      width: 100%;
+      height: 48pt;
+      text-align: center;
+      position: relative;
+      width: 100%;
+      height: 48pt;
 }
 .map-placeholder{
     position: absolute;
@@ -69,6 +72,7 @@
         span:first-child{
             display: block;
             font-weight: bold;
+            margin-bottom: 5%;
         }
     }
 }
