Implement create new profile

--- a/src/components/profilePanel/ProfilePanel.scss
+++ b/src/components/profilePanel/ProfilePanel.scss
@@ -16,7 +16,7 @@
     top: 56%;
     margin: 0 auto;
     border-radius: 5px;
-    box-shadow: 1px -1px 13px -11px;
+    box-shadow: 0pt 1pt 2pt rgba(0, 0, 0, 0.16);
   }
 
   & .profile-avatar {
