--- a/src/pages/trip/ViewTrip.scss
+++ b/src/pages/trip/ViewTrip.scss
@@ -101,10 +101,12 @@
         color: #4f4e4f;
       }
       .number {
+        position: relative;
         font-family: "Roboto";
         font-weight: bold;
         font-size: 16pt;
         color: #ff5347;
+        top: 1pt;
       }
     }
 
