--- a/src/components/trip/Trip.scss
+++ b/src/components/trip/Trip.scss
@@ -13,7 +13,7 @@
   width: 86%;
   height: 74px;
   align-items: center;
-  box-shadow: 0px 2px 14px -11px;
+  box-shadow: 0px 3pt 6pt rgba(0, 0, 0, 0.16);
 
   & .trip-picture {
     position: absolute;
