Fix css problems

--- a/src/components/exploreTrip/ExploreTrip.scss
+++ b/src/components/exploreTrip/ExploreTrip.scss
@@ -24,7 +24,7 @@
     top: 47pt;
     & .save {
       position: absolute;
-      right: 20pt;
+      right: 5%;
       font-size: 23pt;
       bottom: 4pt;
       color: rgba(193, 193, 193, 1);
