--- a/src/components/flight/Flight.scss
+++ b/src/components/flight/Flight.scss
@@ -119,6 +119,11 @@
 
         & .order-text {
           margin: 11px;
+
+          & a {
+            text-decoration: none;
+            color: white;
+          }
         }
       }
     }
