Implement reservation mode in hotels

--- a/src/components/flight/Flight.scss
+++ b/src/components/flight/Flight.scss
@@ -49,6 +49,7 @@
           font-family: "Fira Sans";
           position: relative;
           left: 24pt;
+          text-align: center;
         }
       }
 
@@ -73,6 +74,7 @@
           font-family: "Fira Sans";
           position: relative;
           left: 24pt;
+          text-align: center;
         }
       }
     }
