--- a/src/pages/hotels/Hotels.scss
+++ b/src/pages/hotels/Hotels.scss
@@ -121,4 +121,43 @@
       color: white;
     }
   }
+
+  & .bool-url {
+    text-align: center;
+    text-decoration: none;
+    color: white;
+  }
+
+  & .reservation {
+    top: 33pt;
+    width: 90%;
+    height: 126pt;
+    margin: 0 auto;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    & .reservation-number {
+      height: 30pt;
+      width: 70%;
+      text-align: center;
+      border-color: rgba(255, 83, 71, 0.19);
+    }
+    & .confirm {
+      width: 100pt;
+      height: 30pt;
+      margin: 0 auto;
+      text-align: center;
+      position: relative;
+      bottom: -10pt;
+      color: white;
+      border-radius: 28pt;
+      background: #ff5347;
+
+      & .confirm-text {
+        margin: 11px;
+      }
+    }
+  }
 }
