--- a/src/pages/flights/Flights.scss
+++ b/src/pages/flights/Flights.scss
@@ -31,12 +31,14 @@
   }
 
   & .more-flights {
-    position: relative;
+    position: absolute;
     margin: 0 auto;
-    width: 90%;
+    width: 78%;
     bottom: 42pt;
     background: linear-gradient(to right, #fe784d 0%, #ff5347 100%);
     border: none;
+    left: 50%;
+    margin-left: -38%;
     text-align: center;
     height: 40pt;
     display: flex;
