--- a/src/pages/explore/Explore.scss
+++ b/src/pages/explore/Explore.scss
@@ -7,13 +7,18 @@
   flex-flow: column;
   justify-content: center;
   align-content: center;
-
-  & .header {
+  & .explore-trip-container {
     position: relative;
+    top: 41pt;
+  }
+  & .header {
+    position: fixed;
     width: 100%;
     height: 48pt;
+    top: 0;
     text-align: center;
     background: linear-gradient(to right, #fe784d 0%, #ff5347 100%);
+    z-index: 6;
 
     .title {
       position: relative;
