--- a/src/pages/flights/Flights.scss
+++ b/src/pages/flights/Flights.scss
@@ -1,10 +1,12 @@
 .flights {
   & .header {
-    position: relative;
+    position: fixed;
     width: 100%;
     height: 48pt;
     text-align: center;
     background: linear-gradient(to right, #fe784d 0%, #ff5347 100%);
+    top: 0;
+    z-index: 6;
 
     .title {
       position: relative;
@@ -28,7 +30,7 @@
     position: relative;
     display: flex;
     flex-flow: column;
-    bottom: 61pt;
+    bottom: 21pt;
   }
 
   & .flight {
@@ -46,6 +48,7 @@
     height: 40pt;
     display: flex;
     color: white;
+    top: 32pt;
     border-radius: 34px;
     flex-flow: column;
     position: relative;
