--- a/src/pages/hotels/Hotels.scss
+++ b/src/pages/hotels/Hotels.scss
@@ -8,13 +8,18 @@
   justify-content: center;
   align-content: center;
 
-  & .header {
+  & .hotels-container {
     position: relative;
+    top: 48pt;
+  }
+  & .header {
+    position: fixed;
     width: 100%;
     height: 48pt;
     text-align: center;
     background: linear-gradient(to right, #fe784d 0%, #ff5347 100%);
-
+    top: 0;
+    z-index: 6;
     .title {
       position: relative;
       font-family: "Roboto";
@@ -42,6 +47,7 @@
   & .hotel-name {
     position: relative;
     left: 10pt;
+    width: 90%;
 
     & .name {
       font-size: 140%;
@@ -106,15 +112,16 @@
     align-items: center;
     justify-content: center;
     width: 55%;
-    bottom: 26pt;
+    bottom: 13pt;
     background: #ff5347;
     height: 39pt;
     left: 50%;
     border-radius: 30pt;
-    margin-left: -25.5%;
+    margin-left: -28.5%;
     position: fixed;
 
     & p {
+      text-decoration: none;
       font-size: 120%;
       text-align: center;
       font-weight: bold;
