--- a/src/pages/map/ViewMap.scss
+++ b/src/pages/map/ViewMap.scss
@@ -3,6 +3,58 @@
 }
 
 .view-map {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-content: center;
+
+  & .trips-container {
+    position: relative;
+    top: 42pt;
+  }
+
+  & .view-trip-header {
+    position: relative;
+    top: 48pt;
+  }
+
+  & .header {
+    position: fixed;
+    width: 100%;
+    z-index: 3;
+    height: 48pt;
+    text-align: center;
+    background: linear-gradient(to right, #fe784d 0%, #ff5347 100%);
+    top: 0;
+
+    .trip-name {
+      position: relative;
+      font-family: "Roboto";
+      font-weight: bold;
+      color: white;
+      z-index: 1;
+      font-size: 17pt;
+      bottom: 35pt;
+    }
+
+    .back-btn {
+      color: white;
+      position: absolute;
+      left: 0;
+      top: 8px;
+    }
+  }
+
   & .attractions-container {
+    position: relative;
+    top: 61vh;
+  }
+
+  & .map-view {
+    position: fixed;
+    z-index: 5;
+    top: 50pt;
+    height: 50vh;
+    width: 100%;
   }
 }
