--- a/src/components/loader/Loader.scss
+++ b/src/components/loader/Loader.scss
@@ -7,9 +7,12 @@
   height: 100%;
   width: 100%;
   background-color: white;
-  opacity: 0.8;
   display: flex;
   flex-flow: column;
   justify-content: center;
   align-items: center;
+
+  & .search {
+    margin-top: 16pt;
+  }
 }
