Remove hotel from attraction list

--- a/src/components/attractionMin/AtrractionMin.scss
+++ b/src/components/attractionMin/AtrractionMin.scss
@@ -27,6 +27,7 @@
     position: absolute;
     left: 66px;
     bottom: 15px;
+    top: 4pt;
     color: #313131;
     font-family: "Roboto";
     font-weight: bold;
