--- a/src/pages/tags/Tags.scss
+++ b/src/pages/tags/Tags.scss
@@ -1,6 +1,9 @@
 .tags {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   & .header {
-    position: relative;
+    position: fixed;
     width: 100%;
     height: 48pt;
     text-align: center;
@@ -19,8 +22,10 @@
     font-size: 30pt;
     font-weight: 700;
     width: 90%;
+    left: 21pt;
+    top: 51pt;
     margin: 2pt auto 43pt auto;
-    position: relative;
+    position: fixed;
     display: block;
   }
 
@@ -32,6 +37,8 @@
     padding: 0 10pt 0 10pt;
     text-align: center;
     width: 147pt;
+    position: fixed;
+    bottom: 2pt;
     height: 39pt;
     border-radius: 27pt;
     display: block;
@@ -42,5 +49,7 @@
   & .chip-container {
     width: 90%;
     margin: 0 auto;
+    position: relative;
+    top: 141pt;
   }
 }
