--- a/src/components/trip/Trip.scss
+++ b/src/components/trip/Trip.scss
@@ -21,6 +21,7 @@
     height: 35px;
     left: 18px;
     border-radius: 50px;
+    background-size: cover;
     background-image: url("https://picsum.photos/35");
     background-color: green;
   }
