--- a/src/pages/trip/ViewTrip.scss
+++ b/src/pages/trip/ViewTrip.scss
@@ -41,6 +41,7 @@
     width: 100%;
     position: relative;
     height: 137pt;
+    background-size: cover;
     background-image: url(https://picsum.photos/380/207);
   }
 
