--- a/src/components/profilePanel/ProfilePanel.scss
+++ b/src/components/profilePanel/ProfilePanel.scss
@@ -25,6 +25,8 @@
     margin: 0 auto;
     position: absolute;
     bottom: 20%;
+    background-size: cover;
+    border: 2pt solid white;
     box-shadow: 0px 4px 21px -17px;
     border-radius: 63px;
   }
