--- a/src/components/profileElement/ProfileElement.css
+++ b/src/components/profileElement/ProfileElement.css
@@ -10,6 +10,7 @@
 .profile-element-img {
   height: 113px;
   width: 113px;
+  background-size: cover;
   border-radius: 100%;
   box-shadow: 0 3px 6px #000000;
   margin-bottom: 5px;
