Add loader title and subtitle

--- a/src/components/loader/Loader.scss
+++ b/src/components/loader/Loader.scss
@@ -16,4 +16,16 @@
   & .search {
     margin-top: 16pt;
   }
+
+  & .title {
+    color: #ff5347;
+    font-weight: bold;
+    font-size: medium;
+  }
+
+  & .subtitle {
+    color: #ff5347;
+    font-size: small;
+    margin-top: 0;
+  }
 }
