--- a/src/pages/hotels/Hotels.scss
+++ b/src/pages/hotels/Hotels.scss
@@ -97,6 +97,7 @@ a {
     left: 50%;
     border-radius: 30pt;
     margin-left: -28.5%;
+    margin-bottom: 24pt;
     position: relative;
 
     & p {
