--- a/src/pages/tags/Tags.scss
+++ b/src/pages/tags/Tags.scss
@@ -38,8 +38,8 @@
     padding: 0 10pt 0 10pt;
     text-align: center;
     width: 147pt;
-    position: absolute;
-    bottom: 2pt;
+    position: relative;
+    bottom: -138pt;
     height: 39pt;
     border-radius: 27pt;
     display: block;
